Setup tailwindcss on repo

--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   "license": "MIT",
   "dependencies": {
     "gatsby": "^2.19.32",
+    "gatsby-plugin-sass": "^2.2.1",
+    "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0"
   },
   "devDependencies": {
     "eslint-config-react-app": "^5.2.0",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "tailwindcss": "^1.2.0"
   }
 }
