--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "eslint-config-react-app": "^5.2.0",
     "prettier": "^1.19.1",
+    "prop-types": "^15.7.2",
     "tailwindcss": "^1.2.0"
   }
 }
