Add netlifycms to the repo

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "license": "MIT",
   "dependencies": {
     "gatsby": "^2.19.32",
+    "gatsby-plugin-netlify-cms": "^4.2.2",
     "gatsby-plugin-sass": "^2.2.1",
+    "netlify-cms-app": "^2.12.3",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0"
