--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "gatsby": "^2.19.32",
     "gatsby-plugin-netlify-cms": "^4.2.2",
     "gatsby-plugin-sass": "^2.2.1",
+    "gatsby-source-filesystem": "^2.2.2",
+    "gatsby-transformer-remark": "^2.7.1",
     "netlify-cms-app": "^2.12.3",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
