--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-plugin-sass": "^2.2.1",
     "gatsby-source-filesystem": "^2.2.2",
     "gatsby-transformer-remark": "^2.7.1",
+    "moment": "^2.24.0",
     "netlify-cms-app": "^2.12.3",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
