--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "gatsby": "^2.19.32",
+    "gatsby-plugin-google-analytics": "^2.2.2",
     "gatsby-plugin-netlify-cms": "^4.2.2",
     "gatsby-plugin-sass": "^2.2.1",
     "gatsby-source-filesystem": "^2.2.2",
