--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,7 @@
 backend:
   name: git-gateway
   branch: master
+publish_mode: editorial_workflow
 media_folder: static/img
 public_folder: /img
 collections:
