--- a/.github/workflows/netlify-cms-actions.yml
+++ b/.github/workflows/netlify-cms-actions.yml
@@ -8,4 +8,4 @@ jobs:
       - uses: kentaro-m/auto-assign-action@v1.1.0
         with:
           repo-token: "${{ secrets.GITHUB_TOKEN }}"
-          configuration-path: ".github/workflows/auto_assign.yml"
+          configuration-path: ".github/auto_assign.yml"
